Applied Feedback from Frontend Mentor

--- a/index.html
+++ b/index.html
@@ -13,20 +13,19 @@
 </head>
 
 <body>
-    <div class="container">
+    <main class="container">
+        <h1 class="sr-only">QR Code Component</h1>
         <figure>
-            <img src="img/image-qr-code.png" alt="QR code" title="Visit Frontend Mentor" width="576" height="576">
+            <img src="img/image-qr-code.png" alt="QR code to frontendmentor.io" title="Visit Frontend Mentor"
+                width="576" height="576">
             <figcaption>
-                <span class="nowrap">Improve your front-end</span>
-                <span class="nowrap">skills by building projects</span>
+                Improve your front-end skills by building projects
             </figcaption>
         </figure>
         <p>
-            <span class="nowrap">Scan the QR code to visit Frontend</span>
-            <span class="nowrap">Mentor and take your coding skills to</span>
-            <span class="nowrap">the next level</span>
+            Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
         </p>
-    </div>
+    </main>
 </body>
 
 </html>
