--- a/index.html
+++ b/index.html
@@ -2,30 +2,30 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="mallory-cvlh">
-    <meta name="description" content="QR Code Component">
-    <title>QR Code</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="img/favicon-32x32.png" type="image/x-icon">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="mallory-cvlh">
+  <meta name="description" content="Frontend Mentor QR code component">
+  <title>Frontend Mentor | QR code component</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <main class="container">
-        <h1 class="sr-only">QR Code Component</h1>
-        <figure>
-            <img src="img/image-qr-code.png" alt="QR code to frontendmentor.io" title="Visit Frontend Mentor"
-                width="576" height="576">
-            <figcaption>
-                Improve your front-end skills by building projects
-            </figcaption>
-        </figure>
-        <p>
-            Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-        </p>
-    </main>
+  <main>
+    <article class="card">
+      <img src="img/image-qr-code.png" alt="QR code to visit frontendmentor.io" width="576" height="576">
+      <h1>Improve your front-end skills by building projects</h1>
+      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </article>
+  </main>
+
+  <footer>
+    <p>
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://github.com/mallory-cvlh">mallory-cvlh</a>.
+    </p>
+  </footer>
 </body>
 
 </html>
